--- a/pages/ProjectsTab.html
+++ b/pages/ProjectsTab.html
@@ -10,7 +10,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" 
     integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" 
     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/styleproject.css">
+    <link rel="stylesheet" href="../styles/styleproject.css">
   
 
     <meta charset="utf-8">
@@ -26,7 +26,7 @@
     <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar">
       <div class="container">
         <a class="navbar-brand" href="https://youtu.be/r0xTqwKMOyk?si=w_2iC0RvE0paSvQG">
-          <img src="./props/LogoBar2.png" class="logo" alt="logo" />
+          <img src="../props/LogoBar2.png" class="logo" alt="logo" />
           welcome, My Loners☺
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,16 +35,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./pages/homepage.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./homepage.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/aboutme.html">About Me</a>
+              <a class="nav-link" href="./aboutme.html">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/ProjectsTab.html">Projects</a>
+              <a class="nav-link" href="./ProjectsTab.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/joinme.html">join me</a>
+              <a class="nav-link" href="./joinme.html">join me</a>
             </li>
           </ul>
         </div>
@@ -69,7 +69,7 @@
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="card mb-3">
-                            <img src="./props/1.png" class="card-img-top" alt="project one">
+                            <img src="../props/1.png" class="card-img-top" alt="project one">
                             <div class="card-body">
                               <h5 class="card-title">The Last Stand</h5>
                               <p class="card-text">It was a peaceful day in the Philippines, not until ungodly creatures started showing up. 
@@ -93,23 +93,23 @@
                                         </div>
                                         <div class="modal-body" style="max-height: 70vh; overflow-y: auto; scroll-behavior: smooth;">
                                           <!-- Add your modal body content here -->
-                                          <img src="./props/synopsis.png" class="process" alt="process" >
-                                          <img src="./props/storyconcept.png" class="process" alt="process" >
-                                          <img src="./props/cassieid.png" class="process" alt="process" >
-                                          <img src="./props/cassieturnaround.png" class="process" alt="process" >
-                                          <img src="./props/cassieinfo.png" class="process" alt="process" >
-                                          <img src="./props/cassiefullconcept1.png" class="process" alt="process" >
-                                          <img src="./props/cassiefullconcept2.png" class="process" alt="process" >
-                                          <img src="./props/cassieconcept2.png" class="process" alt="process" >
-                                          <img src="./props/enviroment.png" class="process" alt="process" >
-                                          <img src="./props/blobconcept.png" class="process" alt="process" >
-                                          <img src="./props/enviroment.png" class="process" alt="process" >
-                                          <img src="./props/envi1.png" class="process" alt="process" >
-                                          <img src="./props/envi2.png" class="process" alt="process" >
-                                          <img src="./props/envi3.png" class="process" alt="process" >
-                                          <img src="./props/colorscript.png" class="process" alt="process" >
-                                          <img src="./props/enviroment.png" class="process" alt="process" >
-                                          <img src="./props/enviroment.png" class="process" alt="process" >
+                                          <img src="../props/synopsis.png" class="process" alt="process" >
+                                          <img src="../props/storyconcept.png" class="process" alt="process" >
+                                          <img src="../props/cassieid.png" class="process" alt="process" >
+                                          <img src="../props/cassieturnaround.png" class="process" alt="process" >
+                                          <img src="../props/cassieinfo.png" class="process" alt="process" >
+                                          <img src="../props/cassiefullconcept1.png" class="process" alt="process" >
+                                          <img src="../props/cassiefullconcept2.png" class="process" alt="process" >
+                                          <img src="../props/cassieconcept2.png" class="process" alt="process" >
+                                          <img src="../props/enviroment.png" class="process" alt="process" >
+                                          <img src="../props/blobconcept.png" class="process" alt="process" >
+                                          <img src="../props/enviroment.png" class="process" alt="process" >
+                                          <img src="../props/envi1.png" class="process" alt="process" >
+                                          <img src="../props/envi2.png" class="process" alt="process" >
+                                          <img src="../props/envi3.png" class="process" alt="process" >
+                                          <img src="../props/colorscript.png" class="process" alt="process" >
+                                          <img src="../props/enviroment.png" class="process" alt="process" >
+                                          <img src="../props/enviroment.png" class="process" alt="process" >
                                           <div >
                                           </div>
                                         </div>
@@ -122,7 +122,7 @@
 
                     <div class="col">
                         <div class="card mb-3">
-                            <img src="./props/2.png" class="card-img-top" alt="project two">
+                            <img src="../props/2.png" class="card-img-top" alt="project two">
                             <div class="card-body">
                               <h5 class="card-title">KOFII Brand Project</h5>
                               <p class="card-text">KOFI Rush is a student-run coffee business operating from the 
@@ -145,17 +145,17 @@
                                   </div>
                                   <div class="modal-body" style="max-height: 70vh; overflow-y: auto; scroll-behavior: smooth;">
                                     <!-- Add your modal body content here -->
-                                          <img src="./props/kofilogo.png" class="process" alt="process" >
-                                          <img src="./props/pubmat3.png" class="process" alt="process" >
-                                          <img src="./props/stickersketch.png" class="process" alt="process" >
-                                          <img src="./props/stickersfinal.png" class="process" alt="process" >
-                                          <img src="./props/pubmat1.png" class="process" alt="process" >
-                                          <img src="./props/pubmat4.png" class="process" alt="process" >
-                                          <img src="./props/pubmat5.png" class="process" alt="process" >
-                                          <img src="./props/pubmat2.png" class="process" alt="process" >
-                                          <img src="./props/kofiidocu1.png" class="process" alt="process" >
-                                          <img src="./props/kofiidocu2.png" class="process" alt="process" >
-                                          <img src="./props/kofiidocu3.png" class="process" alt="process" >
+                                          <img src="../props/kofilogo.png" class="process" alt="process" >
+                                          <img src="../props/pubmat3.png" class="process" alt="process" >
+                                          <img src="../props/stickersketch.png" class="process" alt="process" >
+                                          <img src="../props/stickersfinal.png" class="process" alt="process" >
+                                          <img src="../props/pubmat1.png" class="process" alt="process" >
+                                          <img src="../props/pubmat4.png" class="process" alt="process" >
+                                          <img src="../props/pubmat5.png" class="process" alt="process" >
+                                          <img src="../props/pubmat2.png" class="process" alt="process" >
+                                          <img src="../props/kofiidocu1.png" class="process" alt="process" >
+                                          <img src="../props/kofiidocu2.png" class="process" alt="process" >
+                                          <img src="../props/kofiidocu3.png" class="process" alt="process" >
                                   </div>
                                 </div>
                               </div>
@@ -167,7 +167,7 @@
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="card mb-3">
-                            <img src="./props/3.png" class="card-img-top" alt="project one">
+                            <img src="../props/3.png" class="card-img-top" alt="project one">
                             <div class="card-body">
                               <h5 class="card-title">MoonSnooze Studios</h5>
                               <p class="card-text">Dive into the hilarious and heartfelt world of four quirky misfits as 
@@ -192,8 +192,8 @@
                                   </div>
                                   <div class="modal-body" style="max-height: 70vh; overflow-y: auto; scroll-behavior: smooth;">
                                     <!-- Add your modal body content here -->
-                                          <img src="./props/comicconcept.png" class="process" alt="process" >
-                                          <img src="./props/comiclayout.png" class="process" alt="process" >
+                                          <img src="../props/comicconcept.png" class="process" alt="process" >
+                                          <img src="../props/comiclayout.png" class="process" alt="process" >
                                   </div>
                                 </div>
                               </div>
@@ -204,7 +204,7 @@
 
                     <div class="col">
                         <div class="card mb-3">
-                            <img src="./props/4.png" class="card-img-top" alt="project two">
+                            <img src="../props/4.png" class="card-img-top" alt="project two">
                             <div class="card-body">
                               <h5 class="card-title">Bisirsi Branding Project</h5>
                               <p class="card-text">Bisirsi Inking specializes in offering permanent tattoo art and body piercings for those
@@ -228,11 +228,11 @@
                                     </div>
                                     <div class="modal-body" style="max-height: 70vh; overflow-y: auto; scroll-behavior: smooth;">
                                       <!-- Add your modal body content here -->
-                                          <img src="./props/bisirsilandscape.png" class="process" alt="process" >
-                                          <img src="./props/bisirsioriginal.png" class="process" alt="process" >
-                                          <img src="./props/bisirsicolorprofile1.PNG" class="process" alt="process" >
-                                          <img src="./props/bisirsiwhite.png" class="process" alt="process" >
-                                          <img src="./props/bisirsiblack.png" class="process" alt="process" >
+                                          <img src="../props/bisirsilandscape.png" class="process" alt="process" >
+                                          <img src="../props/bisirsioriginal.png" class="process" alt="process" >
+                                          <img src="../props/bisirsicolorprofile1.PNG" class="process" alt="process" >
+                                          <img src="../props/bisirsiwhite.png" class="process" alt="process" >
+                                          <img src="../props/bisirsiblack.png" class="process" alt="process" >
                                           
                                       </div>
                                     </div>
